Fix boldness and text-alignment

--- a/app/assets/stylesheets/_signup.sass
+++ b/app/assets/stylesheets/_signup.sass
@@ -40,10 +40,7 @@
   line-height: normal
   border-radius: 0
   height: 2.05556rem
-
-.container p 
-  text-align: center
-
+  
 body p 
   text-align: justify
 
